--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["celluloce <celluloce24@gmail.com>"]
 
 [dependencies]
 ggez = "0.4.3"
+serde_json = "1.0.32"
+serde_derive = "1.0.80"
+serde = "1.0.80"
